k8s/overlays/production/delete-postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: weaver
$patch: delete
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: weaver
$patch: delete
