k8s/overlays/production/delete-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: weaver
$patch: delete
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: weaver
$patch: delete
